--- a/hotels.html
+++ b/hotels.html
@@ -14,7 +14,7 @@
     <header class="main-header">
       <nav class="navigation-container">
         <a class="logo" href="index.html">
-          <img class="logo-image" src="img/logo-sedona.svg" width="100" height="50" alt="город Седонна логотип">
+          <img class="logo-image" src="img/logo-sedona.svg" width="100" height="50" alt="город Седона логотип">
         </a>
         <ul class="without-bullets site-navigation">
           <li class="nav-item">
@@ -40,7 +40,7 @@
           <form class="user user-filter" method="get" action="https://echo.htmlacademy.ru">
             <div class="check-container">
               <fieldset class="filter-input">
-                <legend>Инфраструктура:</legend>
+                <legend class="checkbox-title">Инфраструктура:</legend>
                 <ul class="without-bullets">
                   <li>
                     <input class="check-input" type="checkbox" name="pool" id="inf-pool" value="pool" checked>
@@ -58,7 +58,7 @@
               </fieldset>
 
               <fieldset class="filter-input">
-                <legend>Тип жилья:</legend>
+                <legend class="checkbox-title">Тип жилья:</legend>
                 <ul class="without-bullets">
                   <li>
                     <input class="check-input" type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
@@ -69,8 +69,7 @@
                     <label class="check" for="type-motel">Мотель</label>
                   </li>
                   <li>
-                    <input class="check-input" type="checkbox" name="apartments" id="type-apartments" value="apartments"
-                      checked>
+                    <input class="check-input" type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
                     <label class="check" for="type-apartments">Апартаменты</label>
                   </li>
                 </ul>
@@ -140,7 +139,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="star four"></p>
+            <p class="stars four-stars">Четыре звезды</p>
             <p>Рейтинг:8,5</p>
           </div>
         </article>
@@ -167,7 +166,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="star three"></p>
+            <p class="stars three-stars">Три звезды</p>
             <p>Рейтинг:8,9</p>
           </div>
         </article>
@@ -194,7 +193,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="star two"></p>
+            <p class="stars two-stars">две звезды</p>
             <p>Рейтинг:9,5</p>
           </div>
         </article>
