убраны лишние марджи

--- a/hotels.html
+++ b/hotels.html
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="stars four-stars">Четыре звезды</p>
+            <p class="stars four-stars" aria-label="Четыре звезды"></p>
             <p>Рейтинг:8,5</p>
           </div>
         </article>
@@ -166,7 +166,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="stars three-stars">Три звезды</p>
+            <p class="stars three-stars" aria-label="Три звезды"></p>
             <p>Рейтинг:8,9</p>
           </div>
         </article>
@@ -193,7 +193,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="stars two-stars">две звезды</p>
+            <p class="stars two-stars" aria-label="Две звезды"></p>
             <p>Рейтинг:9,5</p>
           </div>
         </article>
