--- a/hotels.html
+++ b/hotels.html
@@ -69,7 +69,8 @@
                     <label class="check" for="type-motel">Мотель</label>
                   </li>
                   <li>
-                    <input class="check-input" type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
+                    <input class="check-input" type="checkbox" name="apartments" id="type-apartments" value="apartments"
+                      checked>
                     <label class="check" for="type-apartments">Апартаменты</label>
                   </li>
                 </ul>
