--- a/hotels.html
+++ b/hotels.html
@@ -144,21 +144,21 @@
         <p class="sort-transfer">Cортировка:</p>
         <ul class="without-bullets typical-sorting">
           <li>
-            <a class="link" href="">По цене</a>
+            <a class="link active" href="">По цене</a>
           </li>
           <li>
-            <a class="link" href="">По типу</a>
+            <a class="link active" href="">По типу</a>
           </li>
           <li>
-            <a class="link" href="">По рейтингу</a>
+            <a class="link active" href="">По рейтингу</a>
           </li>
         </ul>
         <div class="sort-button-container">
-          <a class=" sort-button up-button" href="" aria-label="вверх по списку">
+          <a class="sort-button up-button active" href="" aria-label="вверх по списку">
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg>
           </a>
-          <a class=" sort-button down-button" href="" aria-label="вниз по списку">
-            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#81b3d2" d="M5.5 10L0 0h11"/></svg>
+          <a class="sort-button down-button active" href="" aria-label="вниз по списку">
+            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg>
           </a>
         </div>
       </div>
