--- a/hotels.html
+++ b/hotels.html
@@ -256,7 +256,7 @@
       </div>
 
     </main>
-    <footer class="footer">
+    <footer class="footer-wrap">
       <p class="telephone ">#visitsedona
         <a class="link" href="tel:74956660266">тел:+7(495)666-02-66</a>
       </p>
