--- a/hotels.html
+++ b/hotels.html
@@ -45,7 +45,7 @@
                   <li>
                     <input class="check-input" type="checkbox" name="pool" id="inf-pool" value="pool" checked>
                     <label class="check" for="inf-pool">Бассейн
-                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
                       </svg>
                       <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
@@ -57,7 +57,7 @@
                   <li>
                     <input class="check-input" type="checkbox" name="parking" id="inf-parking" value="parking">
                     <label class="check" for="inf-parking">Парковка
-                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
                       </svg>
                       <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg"width="27" height="23" viewBox="0 0 27 23">
@@ -69,7 +69,7 @@
                   <li>
                     <input class="check-input" type="checkbox" name="wi-fi" id="inf-wi-fi" value="wi-fi">
                     <label class="check" for="inf-wi-fi">Wi-fi
-                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
                       </svg>
                       <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
@@ -87,7 +87,7 @@
                   <li>
                     <input class="check-input" type="checkbox" name="hotel" id="type-hotel" value="hotel" checked>
                     <label class="check" for="type-hotel">Гостиница
-                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
                       </svg>
                       <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
@@ -99,7 +99,7 @@
                   <li>
                     <input class="check-input" type="checkbox" name="motel" id="type-motel" value="motel" checked>
                     <label class="check" for="type-motel">Мотель
-                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
                       </svg>
                       <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
@@ -111,7 +111,7 @@
                   <li>
                     <input class="check-input" type="checkbox" name="apartments" id="type-apartments" value="apartments" checked>
                     <label class="check" for="type-apartments">Апартаменты
-                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                      <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
                       </svg>
                       <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
@@ -150,13 +150,13 @@
         <p class="sort-transfer">Cортировка:</p>
         <ul class="without-bullets typical-sorting">
           <li>
-            <a class="link active" href="">По цене</a>
+            <a class="link" href="">По цене</a>
           </li>
           <li>
-            <a class="link active" href="">По типу</a>
+            <a class="link" href="">По типу</a>
           </li>
           <li>
-            <a class="link active" href="">По рейтингу</a>
+            <a class="link" href="">По рейтингу</a>
           </li>
         </ul>
         <div class="sort-button-container">
@@ -249,7 +249,7 @@
           </div>
           <div class="raiting">
             <p class="stars two-stars" aria-label="Две звезды"></p>
-            <p class="number-raiting">Рейтинг:9,5</p>
+            <p class="number-raiting">Рейтинг:9,2</p>
           </div>
         </article>
       </div>
@@ -262,25 +262,13 @@
 
       <ul class="without-bullets social-link">
         <li>
-          <a class="social-icon" href="" aria-label="Твиттер">
-            <svg class="twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
-              <path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z" />
-            </svg>
-          </a>
+          <a class="social-icon twitter" href="" aria-label="Твиттер"></a>
         </li>
         <li>
-          <a class="social-icon" href="" aria-label="Фейсбук">
-            <svg class="facebook" xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
-              <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
-            </svg>
-          </a>
+          <a class="social-icon facebook" href="" aria-label="Фейсбук"></a>
         </li>
         <li>
-          <a class="social-icon" href="" aria-label="Ютуб">
-            <svg class="youtube" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
-              <path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z" />
-            </svg>
-          </a>
+          <a class="social-icon youtube" href="" aria-label="Ютуб"></a>
         </li>
       </ul>
       <div class="academy">
