--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -120,7 +119,7 @@
             <div class="search-date">
               <label for="date-out">Дата выезда:</label>
               <div class="date-container">
-                <input input class="pop-up-input" type="text" id="date-out" placeholder="4 июля 2017">
+                <input class="pop-up-input" type="text" id="date-out" placeholder="4 июля 2017">
                 <button class="date-button" type="button" aria-label="Календарь для даты выезда">
                   <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
                     <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
@@ -133,12 +132,12 @@
               <label for="sum-adults">Взрослые:</label>
               <div class="sum-container">
                 <input class="pop-up-input" type="text" id="sum-adults" name="adults" placeholder="2">
-                <button class="button-minus">
+                <button type="button" class="button-minus">
                   <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
                     <path d="M0 9h24v6h-24z" />
                   </svg>
                 </button>
-                <button class="button-plus">
+                <button type="button" class="button-plus">
                   <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
                     <path d="M24 9h-9v-9h-6v9h-9v6h9v9h6v-9h9z" />
                   </svg>
@@ -149,12 +148,12 @@
               <label for="sum-child">Дети:</label>
               <div class="sum-container">
                 <input class="pop-up-input" type="text" id="sum-child" name="child" placeholder="0">
-                <button class=" button-minus">
+                <button type="button" class=" button-minus">
                   <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
                     <path d="M0 9h24v6h-24z" />
                   </svg>
                 </button>
-                <button class="button-plus">
+                <button type="button" class="button-plus">
                   <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
                     <path d="M24 9h-9v-9h-6v9h-9v6h9v9h6v-9h9z" />
                   </svg>
@@ -175,25 +174,13 @@
       </p>
       <ul class="without-bullets social-link"><!--Добавил в разметку иконки т.к. прозрачность задется самой свг а не фону, если делать через opacity то прозрачным станосвится и фон-->
         <li>
-          <a class="social-icon" href="" aria-label="Твиттер">
-            <svg class="twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15">
-              <path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z" />
-            </svg>
-          </a>
+          <a class="social-icon twitter" href="" aria-label="Твиттер"></a>
         </li>
         <li>
-          <a class="social-icon" href="" aria-label="Фейсбук">
-            <svg class="facebook" xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
-              <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
-            </svg>
-          </a>
+          <a class="social-icon facebook" href="" aria-label="Фейсбук"></a>
         </li>
         <li>
-          <a class="social-icon" href="" aria-label="Ютуб">
-            <svg class="youtube" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
-              <path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z" />
-            </svg>
-          </a>
+          <a class="social-icon youtube" href="" aria-label="Ютуб"></a>
         </li>
       </ul>
       <div class="academy">
@@ -207,6 +194,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
