--- a/hotels.html
+++ b/hotels.html
@@ -60,7 +60,7 @@
                       <svg class="check-button check-off" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
                       </svg>
-                      <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg"width="27" height="23" viewBox="0 0 27 23">
+                      <svg class="check-button check-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                         <path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z" />
                         <path d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
                       </svg>
@@ -195,7 +195,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="stars four-stars" aria-label="Четыре звезды"></p>
+            <p class="stars four-stars">Четыре звезды</p>
             <p class="number-raiting">Рейтинг:8,5</p>
           </div>
         </article>
@@ -221,7 +221,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="stars three-stars" aria-label="Три звезды"></p>
+            <p class="stars three-stars">Три звезды</p>
             <p class="number-raiting">Рейтинг:8,9</p>
           </div>
         </article>
@@ -248,7 +248,7 @@
             </div>
           </div>
           <div class="raiting">
-            <p class="stars two-stars" aria-label="Две звезды"></p>
+            <p class="stars two-stars">Две звезды</p>
             <p class="number-raiting">Рейтинг:9,2</p>
           </div>
         </article>
