Пределаный скрипт, подгонка оформления по макету

--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
               <img class="img-reason" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
               <div class="marked">
                 <h3 class="reason-title">Там есть<br> мост дьявола</h3>
-                <p>—№2—</p>
+                <p class="marked-correct">—№2—</p>
                 <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
             </div>
             <ul class="without-bullets number-reason">
               <li class="other-reasons">
                 <h3 class="reason-title">Небольшая площадь</h3>
-                <p>—№3—</p>
+                <p class="other-reasons-correct">—№3—</p>
                 <p>Все достопримечательности находятся очень близко</p>
               </li>
-              <li class="other-reasons">
+              <li class="other-reasons other-reasons-fix">
                 <h3 class="reason-title">Красивая дорога</h3>
-                <p>—№4—</p>
+                <p class="other-reasons-correct">—№4—</p>
                 <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
               </li>
               <li class="other-reasons">
                 <h3 class="reason-title">Мало туристов</h3>
-                <p>—№5—</p>
+                <p class="other-reasons-correct">—№5—</p>
                 <p>Большинство едет в гранд каньон и толпится там</p>
               </li>
             </ul>
