--- a/hotels.html
+++ b/hotels.html
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="sort">
-        <p class="sort-find">Найдено:3</p>
+        <p class="sort-find">Найдено: 3</p>
         <p class="sort-transfer">Cортировка:</p>
         <ul class="without-bullets typical-sorting">
           <li>
@@ -165,7 +165,7 @@
               <path d="M5.5 0L0 10h11z" />
             </svg>
           </a>
-          <a class="sort-button down-button " href="" aria-label="вниз по списку">
+          <a class="sort-button down-button active" href="" aria-label="вниз по списку">
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
               <path d="M5.5 10L0 0h11" />
             </svg>
@@ -196,7 +196,7 @@
           </div>
           <div class="raiting">
             <p class="stars four-stars">Четыре звезды</p>
-            <p class="number-raiting">Рейтинг:8,5</p>
+            <p class="number-raiting">Рейтинг: 8,5</p>
           </div>
         </article>
         <article class="resting-place">
@@ -222,7 +222,7 @@
           </div>
           <div class="raiting">
             <p class="stars three-stars">Три звезды</p>
-            <p class="number-raiting">Рейтинг:8,9</p>
+            <p class="number-raiting">Рейтинг: 8,9</p>
           </div>
         </article>
 
@@ -249,7 +249,7 @@
           </div>
           <div class="raiting">
             <p class="stars two-stars">Две звезды</p>
-            <p class="number-raiting">Рейтинг:9,2</p>
+            <p class="number-raiting">Рейтинг: 9,2</p>
           </div>
         </article>
       </div>
