--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <h2 class="visually-hidden">Преимущесва</h2>
         <ul class="without-bullets">
           <li>
-            <div class="reason">
+            <div class="reason-landscape">
               <div class="marked">
                 <h3 class="reason-title">Настоящий городок</h3>
-                <p>—№1—</p>
-                <p class="small-scale">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+                <p>— №1 —</p>
+                <p class="small-scale">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="img-reason" src="img/real-city.jpg" width="800" height="400" alt="Фото города Седона">
             </div>
@@ -68,11 +68,11 @@
             </ul>
           </li>
           <li>
-            <div class="reason">
+            <div class="reason-landscape">
               <img class="img-reason" src="img/devil-canyon.jpg" width="800" height="400" alt="Фото дьявольского моста">
               <div class="marked">
                 <h3 class="reason-title">Там есть<br> мост дьявола</h3>
-                <p class="marked-correct">—№2—</p>
+                <p class="marked-correct">— №2 —</p>
                 <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
             </div>
@@ -107,7 +107,7 @@
             <div class="search-date">
               <label for="date-in">Дата заезда:</label>
               <div class="date-container container-correct">
-                <input class="pop-up-input" type="text" id="date-in" name="in" placeholder="24 апреля 2017">
+                <input class="pop-up-input date-in" type="text" id="date-in" name="in" placeholder="24 апреля 2017">
                 <button class="date-button" type="button" aria-label="Календарь для даты заезда">
                   <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
                     <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
@@ -119,7 +119,7 @@
             <div class="search-date">
               <label for="date-out">Дата выезда:</label>
               <div class="date-container">
-                <input class="pop-up-input" type="text" id="date-out" placeholder="4 июля 2017">
+                <input class="pop-up-input date-out" type="text" id="date-out" placeholder="4 июля 2017">
                 <button class="date-button" type="button" aria-label="Календарь для даты выезда">
                   <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
                     <path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
@@ -131,7 +131,7 @@
             <div class="search-sum">
               <label for="sum-adults">Взрослые:</label>
               <div class="sum-container">
-                <input class="pop-up-input" type="text" id="sum-adults" name="adults" placeholder="2">
+                <input class="pop-up-input sum-adults" type="text" id="sum-adults" name="adults" placeholder="2">
                 <button type="button" class="button-minus">
                   <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
                     <path d="M0 9h24v6h-24z" />
@@ -147,7 +147,7 @@
             <div class="search-sum number-correct">
               <label for="sum-child">Дети:</label>
               <div class="sum-container">
-                <input class="pop-up-input" type="text" id="sum-child" name="child" placeholder="0">
+                <input class="pop-up-input sum-child" type="text" id="sum-child" name="child" placeholder="0">
                 <button type="button" class=" button-minus">
                   <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24">
                     <path d="M0 9h24v6h-24z" />
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div>
-        <img class="map" src="img/map.jpg" width="1400" height="750" alt="Карта">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1381652.562069923!2d-113.33995624875845!3d34.11671425889066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1584715663365!5m2!1sru!2sua" width="1200" height="473" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </main>
     <footer class="footer-wrap">
