--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -79,17 +79,17 @@
             <ul class="without-bullets number-reason">
               <li class="other-reasons">
                 <h3 class="reason-title">Небольшая площадь</h3>
-                <p class="other-reasons-correct">—№3—</p>
+                <p class="other-reasons-correct">— №3 —</p>
                 <p>Все достопримечательности находятся очень близко</p>
               </li>
               <li class="other-reasons other-reasons-fix">
                 <h3 class="reason-title">Красивая дорога</h3>
-                <p class="other-reasons-correct">—№4—</p>
+                <p class="other-reasons-correct">— №4 —</p>
                 <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
               </li>
               <li class="other-reasons">
                 <h3 class="reason-title">Мало туристов</h3>
-                <p class="other-reasons-correct">—№5—</p>
+                <p class="other-reasons-correct">— №5 —</p>
                 <p>Большинство едет в гранд каньон и толпится там</p>
               </li>
             </ul>
@@ -194,7 +194,7 @@
       </div>
     </footer>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script-min.js"></script>
 </body>
 
 </html>
